# bit_tutor

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  AI_MODELS_COMPARISON.md  AI_MODELS_INTEGRATION_VERIFICATION.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_IMPROVEMENT_ANALYSIS.md  COMPARISON_WITH_RECENT_MODELS.md  CONTRIBUTING.md  CRITICAL_FIXES_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_COMPLETE.md  Dockerfile  Dockerfile.ai-models  GITHUB_READY_SUMMARY.md  LICENSE  MIGRATION_IMPLEMENTATION_GUIDE.md  Makefile  PROJECT_FINAL_REPORT.md  PROJECT_WALKTHROUGH.md  README.md  README.mdgit  README_NEW.md  REORGANIZED_PROJECT_STRUCTURE.md  SECURITY_FIXES_APPLIED.md  SERVICE_MAPPING_REFERENCE.md  ULTIMATE_PROJECT_SUMMARY.md  ai_models_server.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint-dev.sh  entrypoint.sh  init_db.py  nexus_app.py  pyproject.toml  requirements.txt  run_server_simple.py  setup.sh  (+1 more)
data/: all_students_metadata.json  student_alice.pkl  student_bob.pkl  student_charlie.pkl  student_dana.pkl  student_evan.pkl
docs/: AD4CD_INTEGRATION_GUIDE.md  AI_MODELS_FOR_LAB_GENERATION_SUMMARY.md  AI_MODELS_MATHEMATICAL_FORMULATIONS.md  ALGORITHM_COMPARISON_RESULTS.json  EQUATIONS_SUMMARY.md  LAB_FIXES_AND_UPDATES.md  LAB_GENERATION_ARCHITECTURE_DIAGRAM.md  LAB_GENERATION_IMPLEMENTATION_GUIDE.md  LAB_GENERATION_INPUTS_OUTPUTS.md  PERSONALIZED_LAB_GENERATION_REQUIREMENTS.md  SQKT_INTEGRATION_GUIDE.md  SQKT_MIGRATION_COMPLETE.md  SQKT_PROJECT_WALKTHROUGH.md
routes/: student_learning_routes.py  student_portal_routes.py  teacher_routes.py  (+2 more)
(+92 files in other folders)
