[project]
name = "educational-ai-agent-dashboard"
version = "0.1.0"
description = "Interactive student dashboard with Educational AI Agent featuring personalized learning analytics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "mpld3>=0.5.9",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "transformers>=4.30.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "werkzeug>=2.3.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
